--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Vivek Raj",
+  "author": "Prem",
   "license": "ISC",
   "dependencies": {
     "csv-parser": "^3.0.0",
